# fltk

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yaml  pyproject.toml
docs/: reference.md
src/fltk/: README.md  __init__.py  hello.py
src/fltk/calc/: abc.py
src/fltk/calc_bridge/: bridge.py  calculate.py  load_data.py  load_ratios.py  load_raw_data.py  main.py  periods.py  to_excel.py  vars.py  waterfall.py  (+1 more)
tests/: test_calc_bridge.py  test_calc_comb.py  test_calc_ewm.py  test_calc_ratio.py  test_calc_sump.py  test_calc_wfall.py  test_calccomb.py  test_conn_pg.py  test_dics_dic.py  test_dics_nmtpl.py  test_diffmat.py  test_graphics_titles.py  test_utils_scale_format.py
tests/conn/: test_conn_acc.py
tests/dic/: test_dic.py  test_nmtpl.py
tests/dics/: conftest.py  test_dic.py  test_nmtpl.py
tests/dicz/: bag1.xlsx  dicz1.xlsx  test_dicz.py  test_dicz_filter.py  test_dicz_names_tupl.py
tests/fixtures/: bridge.xlsx  bridge_bkup.xlsx  bridge_z1_2026-05-04.xlsx  bridge_z1_2026-05-05.xlsx  comb.xlsx  comb_bkup.xlsx  comb_z1.xlsx  comb_z1_2026-04-09.xlsx  comb_z1_2026-04-10.xlsx  ddict1.csv  ddict1.xlsx  df1.json  df1a.json  df2.json  dic1.xlsx  dic2.xlsx  diff_mat.xlsx  diffmat.xlsx  diffmat_bkup.xlsx  diffmat_z1.xlsx  ewm.xlsx  ewm_z1_2026-05-24.xlsx  ratio.xlsx  ratio_bkup.xlsx  ratio_z1.xlsx  ratio_z1_2026-04-07.xlsx  ratio_z1_2026-04-10.xlsx  ratio_z1_2026-04-11.xlsx  ratio_z1_2026-05-05.xlsx  sumprod.xlsx  sumprod_bkup.xlsx  sumprod_z1_2026-04-11.xlsx  sumprod_z1_2026-04-15.xlsx  sumprod_z1_2026-05-05.xlsx  sumprod_z2_2026-04-15.xlsx  sumprod_z2_2026-05-05.xlsx  waterfall.xlsx  wfall_z1_2026-05-13.xlsx  wfall_z1_2026-05-14.xlsx  wfall_z1_2026-05-15.xlsx
tests/mung/: test_bridge.py  test_ewm.py  test_ratio.py  test_sump.py  test_wfall.py
tests/prnt/: test_print_msg.py  test_prog_bar.py
tests/rich/: test_msg.py  test_richtools.py
tests/utils/: scale_format.xlsx  test_log1ps.py  test_scale_format.py
(+213 files in other folders)
