[tool.poetry]
name = "fltk"
version = "0.1.0"
description = "Ephel tollkit"
authors = ["François Lefebvre <flefebvre01@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/FrankLef/fltk.git"
repository = "https://github.com/FrankLef/fltk.git"
# source: https://browniebroke.com/blog/convert-existing-poetry-to-src-layout/
packages = [{include = "fltk", from = "src"}]

[tool.poetry.urls]
Changelog = "https://github.com/FrankLef/fltk.git/releases"

[tool.poetry.dependencies]
# python changed to allow install of scipy
python = "^3.10.6"
SQLAlchemy = "^2.0.0"
# sqlalchemy addin to connect to MS Access databases
sqlalchemy-access = "^2.0.2"
# greenlet version ^3.2.2 for python 3.14, it is a dependency of pyodbc
greenlet = "^3.2.2"
pyodbc = "5.3.0"
dynaconf = "^3.1.11"
rich= "^12.5.1"
typer = "^0.13.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"
pre-commit = "^3.6.2"
pre-commit-hooks = "^5.0.0"
pytest = "^7.1.3"
mypy = "^0.971"
typeguard = "^2.13.3"
mkdocs = "^1.5.3"
mkdocstrings = "^0.19.0"
mkdocs-material = "^8.5.4"
mkdocstrings-python = "^0.7.1"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
# source: https://browniebroke.com/blog/convert-existing-poetry-to-src-layout/
pythonpath = ["src"]
testpaths = [
    "tests",
    "integration",
]

[tool.ruff]
# source https://blog.jerrycodes.com/ruff-the-python-linter/
# use this option if you want 'strict' style which is a bit too much
# select = ["ALL"]


# https://mypy.readthedocs.io/en/stable/config_file.html#config-file
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ruamel.yaml",
    "io",
    "dynaconf"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
